kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfoliobackend
  labels:
    app: portfoliobackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfoliobackend
  template:
    metadata:
      name: portfoliobackend
      labels:
        app: portfoliobackend
    spec:
      containers:
        - name: portfoliobackend
          image: sakthisaran/dynamicportfoliobackend:2.0
          imagePullPolicy: IfNotPresent
          resources:
          limits:
            memory: "300Mi"
            cpu: "300m"
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 150
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /usermanagement/actuator/health
            initialDelaySeconds: 50
            periodSeconds: 3
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: portfoliobackendservice
  namespace: default
spec:
  selector:
    app: portfoliobackend
  type: ClusterIP
  ports:
  - name: portfoliobackendservice
    protocol: TCP
    port: 80
    targetPort: 8080
